moved support/customerCare endpoint to affiliate-only section; divided merchant and affiliate integration guides in the sidebar

--- a/openapi/papiv2/paths/v1@support@customercare.yaml
+++ b/openapi/papiv2/paths/v1@support@customercare.yaml
@@ -1,6 +1,6 @@
 get:
   tags:
-    - V1-endpoints
+    - V1-endpoints (affiliates only)
   summary: /v1/support/customercare
   operationId: v1SupportCustomercare
   description: >-
